# rdma

./: CMakeLists.txt
scripts/: run.sh  setup.sh
src/: client.h  follower.h  leader.h  main.cpp  mu_client.h  mu_follower.h  mu_leader.h  synra.h  synra_client.h  synra_faa.h  synra_node.h  synra_tas.h  temp.h
